# ghq

./: .pre-commit-config.yaml  README.md  pyproject.toml
ghq/: __init__.py  multivariate.py  univariate.py
tests/: test_integration.py  test_multivariate.py  test_univariate.py
