[project]
name = "ghq"
version = "0.0.1"
description = "Gauss-Hermite quadrature in JAX"
readme = "README.md"
requires-python ="~=3.9"
license = "Apache-2.0"
homepage = "https://github.com/SamDuffield/ghq"
authors = [
  "Sam Duffield <s@mduffield.com>",
]
keywords = ["jax", "integration", "quadrature"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["jax>=0.4.13"]

[tool.ruff]
ignore-init-module-imports = true
