[project]
name = "ghq"
version = "0.0.2"
description = "Gauss-Hermite quadrature in JAX"
readme = "README.md"
requires-python ="~=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sam Duffield", email = "s@mduffield.com"},
]
keywords = ["jax", "integration", "quadrature"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = ["jax>=0.4.13"]

[project.urls]
Homepage = "https://github.com/SamDuffield/ghq"
Repository = "https://github.com/SamDuffield/ghq"

[tool.ruff]
ignore-init-module-imports = true
